# chithi

./: .gitignore  Dockerfile.android  Dockerfile.arch  Dockerfile.deb  Dockerfile.rpm  PKGBUILD  README.md  SECURITY.md  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  security.yml
debian/: changelog  chithi.desktop  control  copyright  rules
docs/: features.md
docs/adr/: 0001-copy-link-on-click.md  0002-client-side-message-filters.md  0003-plain-text-default-no-remote-content.md  0004-email-threading.md  0005-no-javascript-in-html-emails.md  0006-sync-current-folder-first.md  0007-checkbox-selection-no-ctrl-click.md  0008-jmap-proxy-url-rewriting.md  0009-jmap-send-via-submission.md  0010-account-type-selection.md  0011-system-keyring-for-passwords.md  0012-compose-separate-window.md  0013-draft-save-on-close.md  0014-google-oauth2-for-calendar-contacts.md  0015-calendar-invite-reply-processing.md  0016-google-calendar-api-integration.md  0017-google-api-two-way-sync.md  0018-imap-idle-push-notifications.md  0019-sync-error-status-bar-feedback.md  0020-jmap-eventsource-push-notifications.md  0021-compose-autocomplete-from-contacts.md  0022-carddav-contact-sync.md  0023-fast-initial-sync.md  0024-imap-starttls-support.md  0025-microsoft-365-graph-api-integration.md  0026-sandboxed-html-email-rendering.md  0027-content-security-policy.md  0028-credential-isolation-from-renderer.md  0029-attachment-save-with-backend-dialog.md  0030-google-oauth-pkce-public-client.md  0031-per-window-tauri-capabilities.md  0032-remote-image-loading.md  0033-ssrf-prevention-image-proxy.md  0034-microsoft-365-graph-calendar-sync.md  0035-jmap-contact-crud-jscontact.md  0036-system-folder-deletion-guard.md  0037-sync-architecture-overhaul.md  0038-calendar-invite-provider-delegation.md  0039-background-send-and-operations-panel.md  0040-calendar-invite-roundtrip-overhaul.md  (+4 more)
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: compose.json  default.json  reader.json
src-tauri/src/: error.rs  keyring.rs  lib.rs  logging.rs  main.rs  oauth.rs  path_validation.rs  state.rs
src-tauri/src/calendar/: ical.rs  mod.rs  timezone.rs
src-tauri/src/commands/: accounts.rs  actions.rs  app.rs  attachments.rs  calendar.rs  compose.rs  contacts.rs  events.rs  filters.rs  mail.rs  mod.rs  oauth.rs  sync_cmd.rs
src-tauri/src/db/: accounts.rs  calendar.rs  contacts.rs  filters.rs  folders.rs  messages.rs  mod.rs  pool.rs  schema.rs  service_bindings.rs
src-tauri/src/filters/: engine.rs  rules.rs
src-tauri/src/mail/: autoconfig.rs  caldav.rs  carddav.rs  dav_http.rs  graph.rs  idle.rs  imap.rs  jmap.rs  jmap_push.rs  jmap_sync.rs  mod.rs  msgid.rs  parser.rs  search.rs  smtp.rs  sync.rs  url_validation.rs
src-tauri/src/ops/: coalesce.rs  mod.rs  offline.rs  queue.rs  worker.rs
src/__tests__/: calendar.test.ts  compose-menu-bar.test.ts  compose-window.test.ts  cross-account-move.test.ts  date-input.test.ts  datetime.test.ts  (+13 more)
(+65 files in other folders)
