[package]
name = "chithi"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
imap = "2"
imap-proto = "0.10"
native-tls = "0.2"
mail-parser = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
maildir = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
ammonia = "4"
async-trait = "0.1"
log = "0.4"
fern = { version = "0.7", features = ["date-based"] }
futures = "0.3"
tantivy = "0.22"
dirs = "6"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
regex = "1"
mailparse = "0.16"
jmap-client = "0.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
icalendar = "0.16"
uppsala = "0.3"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }
mime_guess = "2"
urlencoding = "2"
utf7-imap = "0.3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

[build-dependencies]
tauri-build = { version = "2", features = [] }
